[package]

name = "libxdo-sys"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
license = "MIT"
description = "FFI bindings to libxdo"
readme = "README.md"
repository = "https://github.com/crumblingstatue/rust-libxdo-sys"
keywords = ["X11", "automation", "xdotool", "libxdo", "xdo"]

links = "xdo"
build = "build.rs"

[dependencies]
x11 = "*"
libc = "*"
